# NourishBot

./: .gitignore  README.md  main.py  pyproject.toml
modules/: __init__.py  gmail_api.py  reasoning.py  scraper.py
